--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,25 @@
 [tox]
-envlist = py
+envlist = coverage-clean, py, coverage-report
 
 [testenv]
+commands = coverage run -p -m pytest tests {posargs}
+passenv = TRAVIS CI
+deps =
+    coverage
+    pytest
+
+[testenv:coverage-clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
+
+[testenv:coverage-report]
+deps = coverage
+skip_install = true
+commands =
+    coverage combine
+    coverage report
+
+[testenv:deploy]
 commands = python3 -m bio2bel_chembl deploy
 passenv = ARTY_USERNAME ARTY_PASSWORD
-
