Add rst-lint to tox config

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = coverage-clean, py, coverage-report
+envlist = coverage-clean, py, coverage-report, rst-lint
 
 [testenv]
 commands = coverage run -p -m pytest tests {posargs}
@@ -23,3 +23,11 @@ commands =
 [testenv:deploy]
 commands = python3 -m bio2bel_chembl deploy
 passenv = ARTY_USERNAME ARTY_PASSWORD
+
+[testenv:rst-lint]
+commands = rst-lint README.rst
+skip_install = true
+deps =
+    restructuredtext_lint
+    pygments
+
